--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-SQLALCHEMY_DATABASE_URL=postgresql+psycopg2://postgres:Monster5%@127.0.0.1:5432/twitter_mock 
+SQLALCHEMY_DATABASE_URL=postgresql+psycopg2://postgres:newpgadmin@127.0.0.1:5432/twitter_mock 
 
