--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ Flask-Migrate==3.1.0
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.15.1
 greenlet==1.1.1
+gunicorn==20.1.0
 idna==3.2
 importlib-metadata==4.8.1
 importlib-resources==5.2.2
